z-index fix for modals

--- a/css/styles.css
+++ b/css/styles.css
@@ -2067,7 +2067,7 @@ footer .bottom .copyright {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  z-index: 1000;
+  z-index: 10004;
 }
 
 /* Modal */
